# MarkShot

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml  deploy-pages.yml
LP/: index_a.html  index_b.html  index_c.html  index_d.html
LP/assets/css/: common.css
blog/: primary-display-fix-article.md
docs/: benchmark.md  fix-memo.md  markshot2-setup.md  minutes-2026-04-22.md  startup-analysis.md
electron/: google-drive.ts  main.ts  preload.ts  settings.ts
scripts/: benchmark.ps1  build-arm64.bat  compare.ps1  dev-arm64.bat
src/: App.tsx  gifenc.d.ts  index.css  types.d.ts
src-tauri/: .gitignore  Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AnnotationEditor.tsx  CaptureBar.tsx  CountdownOverlay.tsx  RecordingControl.tsx  RecordingOverlay.tsx  RegionSelector.tsx  SettingsPanel.tsx  SharePanel.tsx  Toolbar.tsx
src/hooks/: useAnnotation.ts
src/utils/: clipboard.ts  regionSelectionLogic.test.ts  regionSelectionLogic.ts  scrollStitch.ts  settings.ts
