[package]
name = "markshot"
version = "2.0.0"
description = "スクリーンショット&注釈ツール (Tauri 2)"
authors = ["AppTalentHub"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.0.14"
image = "0.25"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
