[package]
name = "markshot"
version = "2.0.1"
description = "スクリーンショット&注釈ツール (Tauri 2)"
authors = ["AppTalentHub"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "markshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
